<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


   <item android:id="@+id/nav_my_ticket"
    android:title="@string/my_ticket"
    android:icon="@drawable/ticket_list"/>
   <item android:id="@+id/nav_notification"
    android:title="@string/notification"
    android:icon="@drawable/iconnotification"/>
   <item android:id="@+id/nav_transaction_history"
    android:title="@string/transaction_history"
    android:icon="@drawable/tran_history"/>
<!--   <item android:id="@+id/nav_setting"-->
<!--    android:title="@string/setting"-->
    android:icon="@drawable/setting"/>
   <!--<item android:id="@+id/nav_tickit_list"
    android:title="@string/ticket_list"
    android:icon="@drawable/ticket_list"/>-->
   <item android:id="@+id/nav_help"
    android:title="@string/help"
    android:icon="@drawable/help"/>
   <item android:id="@+id/nav_private_policy"
    android:title="@string/private_policy"
    android:icon="@drawable/private_policy"/>
   <item android:id="@+id/nav_term_and_condition"
    android:title="@string/Term_and_condition"
    android:icon="@drawable/term_condition"/>
    <item android:id="@+id/nav_logout"
    android:title="@string/logout"
    android:icon="@drawable/logout"/>

</menu>