<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/getstart_bg">

    <ProgressBar
        android:id="@+id/progess_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/registration_img"
        android:scaleType="fitXY"
        android:paddingStart="80dp"
        android:paddingEnd="80dp"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline1" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".10" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".42" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/sign_in_ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <TextView
            android:id="@+id/login_txt_header"
            style="@style/TextHeader"
            android:text="@string/create_acc_"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_vvlg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline2" />


        <TextView
            android:id="@+id/sign_in_txt_sub_header"
            style="@style/TextSubHeader"
            android:text="@string/sign_up_to_git_started"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_lg"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="@+id/get_starte_txt_header"
            app:layout_constraintStart_toStartOf="@+id/get_starte_txt_header"
            app:layout_constraintTop_toBottomOf="@+id/get_starte_txt_header" />
    </androidx.appcompat.widget.LinearLayoutCompat>



    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/sign_in_ll_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintBottom_toTopOf="@+id/sign_in_btn_create_acc"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_ll_header"
        app:layout_constraintStart_toStartOf="@+id/sign_in_ll_header"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_ll_header">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            android:hint="@string/mobile_no"
            android:layout_marginBottom="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_in_edt_mobile_no"
                style="@style/EditText"
                android:inputType="phone"
                android:focusable="false"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            android:hint="@string/user_name"
            android:layout_marginBottom="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_in_edt_user_name"
                style="@style/EditText"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            android:hint="@string/refferal_code">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_in_edt_refferal_code"
                style="@style/EditText"
                />

        </com.google.android.material.textfield.TextInputLayout>









    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_btn_create_acc"
        style="@style/Button"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/create_acc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>