<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/getstart_bg">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/getstarted_img"
        android:scaleType="fitXY"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline1" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".15" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".60" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@+id/get_starte_btn_started"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <TextView
            android:id="@+id/get_starte_txt_header"
            style="@style/TextHeader"
            android:layout_gravity="start"
            android:text="@string/get_your_new_lottery"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline2" />


        <TextView
            android:id="@+id/get_starte_txt_sub_header"
            style="@style/TextSubHeader"
            android:layout_gravity="center"
            android:gravity="start"
            android:text="@string/get_start_sub_header"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_md"
            app:layout_constraintBottom_toTopOf="@+id/get_starte_btn_started"
            app:layout_constraintEnd_toEndOf="@+id/get_starte_txt_header"
            app:layout_constraintStart_toStartOf="@+id/get_starte_txt_header"
            app:layout_constraintTop_toBottomOf="@+id/get_starte_txt_header" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/get_starte_btn_started"
        style="@style/Button"
        android:layout_marginBottom="@dimen/_40sdp"
        android:text="@string/go_for_ticket"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

</layout>