<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">



<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/getstart_bg">





    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/dialog_amt_ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/dialog_amt_txt_sub_header"
            style="@style/TextSubHeader"
            android:text="@string/enter_amt"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_lg"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="@+id/get_starte_txt_header"
            app:layout_constraintStart_toStartOf="@+id/get_starte_txt_header"
            app:layout_constraintTop_toBottomOf="@+id/get_starte_txt_header" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_amt">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_amt_edt_amt"
                style="@style/EditText"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:id="@+id/edit_number"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="Enter Phone Number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_number"
                style="@style/EditText"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_amt_btn_submit"
            style="@style/Button"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/submit"
            android:textSize="@dimen/txt_sm"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_amt_btn_cancel"
            style="@style/Button"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/cancel"
            android:textSize="@dimen/txt_sm"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>





</androidx.constraintlayout.widget.ConstraintLayout>

</layout>