<?xml version="1.0" encoding="utf-8"?>

<layout>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progess_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >


<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:id="@+id/my_ticket_txt_latest_draw"
        style="@style/TextSemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latest_draw"
        android:textSize="@dimen/txt_lg"
        android:layout_marginTop="10dp"
        android:layout_marginStart="19dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_ticket_rv_latest_draw"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"

        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_ticket_txt_latest_draw"
        tools:listitem="@layout/rv_ticket_list" />
<!--    android:maxHeight="@dimen/_50sdp"-->
    <TextView
        android:id="@+id/my_ticket_txt_monthly_draw"
        style="@style/TextSemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monthly_draw"
        android:textSize="@dimen/txt_lg"
        android:layout_marginTop="10dp"
        android:layout_marginStart="19dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_ticket_rv_latest_draw" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_ticket_rv_monthly_draw"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_ticket_txt_monthly_draw"
        tools:listitem="@layout/rv_ticket_list" />
<!--    android:maxHeight="@dimen/_50sdp"-->

    <TextView
        android:id="@+id/my_ticket_txt_occasion_draw"
        style="@style/TextSemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/occasion_draw"
        android:textSize="@dimen/txt_lg"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:layout_marginStart="19dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_ticket_rv_monthly_draw" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_ticket_rv_occation_draw"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
          android:visibility="gone"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_ticket_txt_occasion_draw"
        tools:listitem="@layout/rv_ticket_list" />
<!--    android:maxHeight="@dimen/_50sdp"-->
</androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>