<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/getstart_bg">

    <ProgressBar
        android:id="@+id/progess_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:scaleType="fitXY"
        android:src="@drawable/login_img"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline1" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".42" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/login_ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <TextView
            android:id="@+id/login_txt_header"
            style="@style/TextHeader"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_vvlg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline2" />


        <TextView
            android:id="@+id/login_txt_sub_header"
            style="@style/TextSubHeader"
            android:text="@string/sign_in_to_continue"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_lg"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="@+id/get_starte_txt_header"
            app:layout_constraintStart_toStartOf="@+id/get_starte_txt_header"
            app:layout_constraintTop_toBottomOf="@+id/get_starte_txt_header" />
    </androidx.appcompat.widget.LinearLayoutCompat>



    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/login_ll_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintBottom_toTopOf="@+id/login_btn_submit"
        app:layout_constraintEnd_toEndOf="@+id/login_ll_header"
        app:layout_constraintStart_toStartOf="@+id/login_ll_header"
        app:layout_constraintTop_toBottomOf="@+id/login_ll_header">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            android:hint="@string/mobile_no">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_edt_mobile_no"
                style="@style/EditText"

                android:inputType="phone"
                 />
        </com.google.android.material.textfield.TextInputLayout>


        <com.example.lottry.development.ui.OtpTextView
    android:id="@+id/otp_view"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/_50sdp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="@dimen/_10sdp"
    android:textColor="@color/white"
    android:layout_gravity="center"
    android:foregroundGravity="center"
    app:box_margin="10dp"
    app:height="40dp"
    app:hide_otp="false"
    app:length="4"
    app:otp=""
    app:otp_box_background="@drawable/bg_pin_inactive"
    app:otp_box_background_active="@drawable/bg_pin_active"
    app:otp_box_background_inactive="@drawable/bg_pin_inactive"
    app:otp_box_background_success="@drawable/bg_pin_active"
    app:otp_text_size="20dp"
    app:width="40dp"
    app:layout_constraintEnd_toEndOf="@+id/verify_text1"
    app:layout_constraintStart_toStartOf="@+id/verify_text1"
    app:layout_constraintTop_toBottomOf="@+id/verify_text1"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/resend_timer"
        style="@style/TextSubHeader"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/login_btn_submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_8sdp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn_resend"
        style="@style/Button"
        android:text="Resend"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/login_btn_submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_8sdp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn_submit"
        style="@style/Button"
        android:layout_marginBottom="@dimen/_40sdp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>